--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
             // Puedes encontrar más opciones en la documentación
             // https://chat.cooperbot.com.mx/docs
             iframeHeight: '600px',
-            bubbleBackgroundColor: '#7269ef',
+            bubbleBackgroundColor: '#f22885',
             borderRadius: '15px',
             initialMessage: 'Chatea con nosotros',
             darkMode: true
